--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,155 +1,42 @@
 #root {
-  font-family: Arial, Helvetica, sans-serif;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
-body {
-  padding-top: 5em;
-  padding-bottom: 5em;
-  height: 100vh;
-  background-color: rgb(237, 250, 250);
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@media (min-width: 768px) {
-  body {
-    margin-left: 10em;
-    margin-right: 10em;
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
 
-.tab-active {
-  border-bottom: 4px rgb(202, 129, 2) solid;
-  padding-bottom: 0.5em;
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
 }
 
-form {
-  display: flex;
-  background-color: white;
-  align-items: center;
-}
-
-input {
-  padding: 0.5em;
-  font-size: 2em;
-  flex: 1;
-  border: none;
-}
-
-input:focus {
-  outline: none;
-}
-
-button {
-  background-color: white;
-  border: none;
-  cursor: pointer;
-}
-
-.recipe-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  gap: 2em;
-}
-
-.recipe-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  background-color: white;
-  padding: 1em;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-  position: relative;
-  cursor: pointer;
-  gap: 1.5em;
-}
-
-.recipe-card h3 {
-  font-size: 1.5em;
-  margin: 0;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.view-more-button {
-  font-size: 1.5em;
-  padding: 1em;
-  font-weight: bold;
-  margin: auto;
-}
-
-.app-container {
-  display: flex;
-  flex-direction: column;
-  gap: 2em;
-}
-
-.header {
-  position: relative;
-}
-
-.header img {
-  width: 100%;
-  height: 500px;
-  object-fit: cover;
-  object-position: center;
-  opacity: 50%;
-  border-radius: 1em;
-}
-
-.title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 2em;
-  text-align: center;
-  background-color: black;
-  opacity: 80%;
-  padding: 0.5em 1.5em 0.5em 1.5em;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0, 0, 0, 0.7);
-  z-index: 1;
-}
-
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.modal-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.modal-content {
-  background-color: white;
+.card {
   padding: 2em;
-  border-radius: 4px;
-  max-width: 500px;
 }
 
-.tabs {
-  display: flex;
-  gap: 2em;
-  cursor: pointer;
-}
-
-.recipe-card-title {
-  display: flex;
-  align-items: center;
-  gap: 0.5em;
+.read-the-docs {
+  color: #888;
 }
